<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/navigation_home"
            android:title="@string/navigation_home"/>

        <item
            android:id="@+id/navigation_video"
            android:icon="@drawable/navigation_video"
            android:title="@string/navigation_video"/>

        <item
            android:id="@+id/navigation_gift"
            android:icon="@drawable/navigation_gift"
            android:title="@string/navigation_gift"/>

        <item
            android:id="@+id/navigation_collect"
            android:icon="@drawable/navigation_collect_nor"
            android:title="@string/navigation_collect"/>
    </group>

    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/navigation_setting"
            android:title="@string/navigation_settings"/>

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/navigation_about"
            android:title="@string/navigation_about"/>
    </group>
</menu>