<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/about_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/about_img_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/about_head_bg"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/about_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="@string/about_app_str"
                android:textColor="@color/text_default"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="@string/about_thanks_str"
                android:textColor="@color/text_default"/>

            <com.gank.gankly.widget.ItemTextView
                android:id="@+id/about_item_text_gank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:TextSummary="@string/about_gank_url"
                app:TextTitle="@string/about_gank"/>

            <com.gank.gankly.widget.ItemTextView
                android:id="@+id/about_item_text_mzitu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TextSummary="@string/about_mzitu_url"
                app:TextTitle="@string/about_mzitu"/>

            <com.gank.gankly.widget.ItemTextView
                android:id="@+id/about_item_text_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TextSummary="@string/about_my_github_url"
                app:TextTitle="@string/about_my_github"/>

            <com.gank.gankly.widget.ItemTextView
                android:id="@+id/about_item_text_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:TextSummary="@string/about_contact_email"
                app:TextTitle="@string/about_contact"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>