<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meizi_wallpaper"
        android:icon="@drawable/meizi_wallpaper"
        android:orderInCategory="100"
        android:title="@string/meizi_wallpaper"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/meizi_save"
        android:icon="@drawable/meizi_save"
        android:orderInCategory="100"
        android:title="@string/meizi_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/meizi_share"
        android:icon="@drawable/navigation_share"
        android:orderInCategory="100"
        android:title="@string/navigation_share"
        app:showAsAction="ifRoom"/>
</menu>