<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mine_nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/themeBackground"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/item_default_img"/>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/mine_ll_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/baseAdapterItemBackground"
                android:orientation="vertical"
                app:divider="@drawable/shape_item_divider"
                app:showDividers="middle">

                <RelativeLayout
                    android:id="@+id/mine_rl_browse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="16dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/mine_txt_browse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/mine_browse"
                        android:gravity="center_vertical"
                        android:text="@string/mine_browse"
                        android:textColor="?attr/textPrimaryColor"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mine_rl_collect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="16dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/mine_txt_collect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/mine_collect"
                        android:gravity="center_vertical"
                        android:text="@string/mine_my_collect"
                        android:textColor="?attr/textPrimaryColor"/>
                </RelativeLayout>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/mine_ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/baseAdapterItemBackground"
                android:orientation="vertical"
                app:divider="@drawable/shape_item_divider"
                app:showDividers="middle">

                <RelativeLayout
                    android:id="@+id/mine_rl_night"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="16dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp">

                    <com.gank.gankly.widget.LSwitch
                        android:id="@+id/mine_ls_theme"
                        android:layout_width="44dp"
                        android:layout_height="26dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/mine_txt_night"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/mine_night"
                        android:gravity="center_vertical"
                        android:text="@string/mine_night"
                        android:textColor="?attr/textPrimaryColor"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mine_rl_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="16dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/mine_txt_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/mine_setting"
                        android:gravity="center_vertical"
                        android:text="@string/mine_setting"
                        android:textColor="?attr/textPrimaryColor"/>
                </RelativeLayout>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>